[package]
name = "eth-imp-rust"
version = "0.1.0"
edition = "2021"
description = "EVM implemation in rust"
repository = "https://github.com/advock/eth-imp-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
