[package]
name = "eth-imp-rust"
version = "0.1.0"
edition = "2021"
description = "EVM implemation in rust"
repository = "https://github.com/advock/eth-imp-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.12", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = [
    "derive",
    "full",
], optional = true }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }
auto_impl = "1.0"
ethereum = { version = "0.14", default-features = false }
log = { version = "0.4", default-features = false }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }
